Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/XP_Transaction__c/XP_Transaction__c.object-meta.xml
<CustomObject>
    <label>XP Transaction</label>
    <pluralLabel>XP Transactions</pluralLabel>
    <nameField>
        <label>XP Transaction</label>
        <type>AutoNumber</type>
        <displayFormat>XT-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>