Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/XP_Transaction__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Text</type>
    <length>80</length>
    <inlineHelpText>The logical action that generated this XP (for example Badge_Earned, Cert_Earned, Streak_Day).</inlineHelpText>
</CustomField>