Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/XP_Transaction__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <inlineHelpText>Optional context about how this XP was calculated.</inlineHelpText>
</CustomField>