Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/XP_Transaction__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <type>DateTime</type>
    <inlineHelpText>The date and time when this XP was awarded.</inlineHelpText>
</CustomField>