Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/XP_Transaction__c/fields/XP_Amount__c.field-meta.xml
<CustomField>
    <fullName>XP_Amount__c</fullName>
    <label>XP Amount</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <inlineHelpText>The XP value awarded for this transaction.</inlineHelpText>
</CustomField>